[gd_scene load_steps=14 format=3 uid="uid://bt0n0l7e3i1s"]

[ext_resource type="PackedScene" uid="uid://byt03rernj7cq" path="res://scenes/enemy/classic_world/drops/drop.tscn" id="1_25fhf"]
[ext_resource type="Script" path="res://scripts/enemy/classic_world/drops/ice_drop.gd" id="1_wgiwt"]
[ext_resource type="Texture2D" uid="uid://7cj8wkwn8sah" path="res://art/enemy/classic_world/ice_drop.png" id="2_3g1yb"]
[ext_resource type="Texture2D" uid="uid://jo2guthsahun" path="res://art/enemy/classic_world/ice_explosion.png" id="3_q8222"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5s4an"]
atlas = ExtResource("3_q8222")
region = Rect2(0, 0, 144, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_iadbf"]
atlas = ExtResource("2_3g1yb")
region = Rect2(0, 0, 144, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_ankjy"]
atlas = ExtResource("2_3g1yb")
region = Rect2(144, 0, 144, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_fq2xm"]
atlas = ExtResource("2_3g1yb")
region = Rect2(288, 0, 144, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_7al2e"]
atlas = ExtResource("2_3g1yb")
region = Rect2(432, 0, 144, 69)

[sub_resource type="SpriteFrames" id="SpriteFrames_r58q0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5s4an")
}],
"loop": true,
"name": &"explosion",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iadbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ankjy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fq2xm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7al2e")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="Curve" id="Curve_5apk6"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_bdlba"]
offsets = PackedFloat32Array(0.02, 0.56, 0.986667)
colors = PackedColorArray(0.0810786, 0, 0.961294, 1, 0, 0.705595, 0.813836, 1, 0.395117, 0.626688, 1, 1)

[sub_resource type="Gradient" id="Gradient_og2d8"]
colors = PackedColorArray(0, 0.313611, 0.62613, 1, 1, 1, 1, 1)

[node name="ice_drop" type="Node2D" groups=["drop"]]
script = ExtResource("1_wgiwt")

[node name="drop_component" parent="." instance=ExtResource("1_25fhf")]
timer_length = 2.0
delete_timer_length = 1.0
fall_speed = 25

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, 1)
sprite_frames = SubResource("SpriteFrames_r58q0")
animation = &"idle"

[node name="StaticBody2D" type="StaticBody2D" parent="." groups=["drop"]]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2(0, 21)
polygon = PackedVector2Array(-17, -35, -9, 0, 9, 0, 17, -35)

[node name="explosion_hitbox" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="explosion_hitbox"]
position = Vector2(0, 20)
polygon = PackedVector2Array(-15, -1, -15, 6, -14, 11, -13, 12, -11, 12, -5, 1, -4, 1, -3, 12, -2, 12, 0, 8, 2, 12, 4, 1, 11, 13, 14, 12, 15, -1, 30, 3, 30, 1, 17, -11, 17, -12, 32, -19, 32, -20, 17, -26, 17, -27, 30, -40, 30, -41, 15, -38, 13, -52, 5, -40, 3, -51, 1, -46, -1, -46, -3, -51, -4, -40, -13, -51, -15, -37, -30, -41, -17, -27, -32, -20, -17, -12, -30, 1, -30, 2)

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(-1, -16)
emitting = false
amount = 50
one_shot = true
explosiveness = 1.0
randomness = 0.25
fixed_fps = 60
direction = Vector2(0, 1)
spread = 148.35
gravity = Vector2(0, 0)
initial_velocity_min = 55.0
initial_velocity_max = 70.0
angle_min = -5.0
angle_max = 5.0
scale_amount_min = 10.0
scale_amount_max = 16.0
scale_amount_curve = SubResource("Curve_5apk6")
color_ramp = SubResource("Gradient_bdlba")
color_initial_ramp = SubResource("Gradient_og2d8")

[connection signal="body_entered" from="explosion_hitbox" to="." method="_on_explosion_hitbox_body_entered"]
